# kanitomo

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/crab/: entity.rs  mod.rs  mood.rs
src/environment/: elements.rs  mod.rs
src/git/: mod.rs  stats.rs
src/state/: mod.rs  persistence.rs
src/ui/: app.rs  messages.rs  minigames.rs  mod.rs  widgets.rs
src/ui/minigames/: breakout.rs  crab_catch.rs  dash.rs  game_2048.rs  mod.rs  snake.rs  tetris.rs  vsrg.rs
src/ui/widgets/: helpers.rs  minigames.rs  mod.rs  overlays.rs  scene.rs  stats.rs
