[package]
name = "kanitomo"
version = "0.1.0"
edition = "2021"
description = "A terminal pet crab that thrives on your git commits"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Git (minimal features for local repo access only)
git2 = { version = "0.19", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Paths
dirs = "5.0"

# File watching
notify = "7.0"

# Async runtime for file watcher
tokio = { version = "1.0", features = ["rt", "sync", "time", "macros"] }

# Error handling
anyhow = "1.0"

# Random for animations
rand = "0.8"
